--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,428 @@
-{"cells": [{"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["# Website A/B Testing - Lab\n", "\n", "## Introduction\n", "\n", "In this lab, you'll get another chance to practice your skills at conducting a full A/B test analysis. It will also be a chance to practice your data exploration and processing skills! The scenario you'll be investigating is data collected from the homepage of a music app page for audacity.\n", "\n", "## Objectives\n", "\n", "You will be able to:\n", "* Analyze the data from a website A/B test to draw relevant conclusions\n", "* Explore and analyze web action data"]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["## Exploratory Analysis\n", "\n", "Start by loading in the dataset stored in the file 'homepage_actions.csv'. Then conduct an exploratory analysis to get familiar with the data."]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["> Hints:\n", "    * Start investigating the id column:\n", "        * How many viewers also clicked?\n", "        * Are there any anomalies with the data; did anyone click who didn't view?\n", "        * Is there any overlap between the control and experiment groups? \n", "            * If so, how do you plan to account for this in your experimental design?"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["## Conduct a Statistical Test\n", "\n", "Conduct a statistical test to determine whether the experimental homepage was more effective than that of the control group."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["## Verifying Results\n", "\n", "One sensible formulation of the data to answer the hypothesis test above would be to create a binary variable representing each individual in the experiment and control group. This binary variable would represent whether or not that individual clicked on the homepage; 1 for they did and 0 if they did not. \n", "\n", "The variance for the number of successes in a sample of a binomial variable with n observations is given by:\n", "\n", "## $n\\bullet p (1-p)$\n", "\n", "Given this, perform 3 steps to verify the results of your statistical test:\n", "1. Calculate the expected number of clicks for the experiment group, if it had the same click-through rate as that of the control group. \n", "2. Calculate the number of standard deviations that the actual number of clicks was from this estimate. \n", "3. Finally, calculate a p-value using the normal distribution based on this z-score."]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["### Step 1:\n", "Calculate the expected number of clicks for the experiment group, if it had the same click-through rate as that of the control group. "]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["### Step 2:\n", "Calculate the number of standard deviations that the actual number of clicks was from this estimate."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["### Step 3: \n", "Finally, calculate a p-value using the normal distribution based on this z-score."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#Your code here"]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["### Analysis:\n", "\n", "Does this result roughly match that of the previous statistical test?\n", "\n", "> Comment: **Your analysis here**"]}, {"attachments": {}, "cell_type": "markdown", "metadata": {}, "source": ["## Summary\n", "\n", "In this lab, you continued to get more practice designing and conducting AB tests. This required additional work preprocessing and formulating the initial problem in a suitable manner. Additionally, you also saw how to verify results, strengthening your knowledge of binomial variables, and reviewing initial statistical concepts of the central limit theorem, standard deviation, z-scores, and their accompanying p-values."]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.6.6"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Website A/B Testing - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll get another chance to practice your skills at conducting a full A/B test analysis. It will also be a chance to practice your data exploration and processing skills! The scenario you'll be investigating is data collected from the homepage of a music app page for audacity.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "* Analyze the data from a website A/B test to draw relevant conclusions\n",
+    "* Explore and analyze web action data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Analysis\n",
+    "\n",
+    "Start by loading in the dataset stored in the file 'homepage_actions.csv'. Then conduct an exploratory analysis to get familiar with the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Hints:\n",
+    "    * Start investigating the id column:\n",
+    "        * How many viewers also clicked?\n",
+    "        * Are there any anomalies with the data; did anyone click who didn't view?\n",
+    "        * Is there any overlap between the control and experiment groups? \n",
+    "            * If so, how do you plan to account for this in your experimental design?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6328"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('homepage_actions.csv')\n",
+    "\n",
+    "num_users = df['id'].nunique()\n",
+    "num_users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>id</th>\n",
+       "      <th>group</th>\n",
+       "      <th>action</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2016-09-24 20:58:01.948663</td>\n",
+       "      <td>349125</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2016-09-24 21:06:27.553057</td>\n",
+       "      <td>601714</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2016-09-24 21:30:02.739756</td>\n",
+       "      <td>487634</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2016-09-24 23:01:12.108316</td>\n",
+       "      <td>468601</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2016-09-25 00:01:47.933853</td>\n",
+       "      <td>555973</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8162</th>\n",
+       "      <td>2017-01-17 23:20:35.483601</td>\n",
+       "      <td>451198</td>\n",
+       "      <td>control</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8164</th>\n",
+       "      <td>2017-01-17 23:47:58.209653</td>\n",
+       "      <td>252195</td>\n",
+       "      <td>control</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8167</th>\n",
+       "      <td>2017-01-18 00:56:24.554729</td>\n",
+       "      <td>344770</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8180</th>\n",
+       "      <td>2017-01-18 08:54:56.879682</td>\n",
+       "      <td>615849</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8182</th>\n",
+       "      <td>2017-01-18 09:09:17.363917</td>\n",
+       "      <td>795585</td>\n",
+       "      <td>control</td>\n",
+       "      <td>click</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1860 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       timestamp      id       group action\n",
+       "8     2016-09-24 20:58:01.948663  349125  experiment  click\n",
+       "12    2016-09-24 21:06:27.553057  601714  experiment  click\n",
+       "15    2016-09-24 21:30:02.739756  487634  experiment  click\n",
+       "17    2016-09-24 23:01:12.108316  468601  experiment  click\n",
+       "21    2016-09-25 00:01:47.933853  555973  experiment  click\n",
+       "...                          ...     ...         ...    ...\n",
+       "8162  2017-01-17 23:20:35.483601  451198     control  click\n",
+       "8164  2017-01-17 23:47:58.209653  252195     control  click\n",
+       "8167  2017-01-18 00:56:24.554729  344770  experiment  click\n",
+       "8180  2017-01-18 08:54:56.879682  615849  experiment  click\n",
+       "8182  2017-01-18 09:09:17.363917  795585     control  click\n",
+       "\n",
+       "[1860 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicates = df[df['id'].duplicated()]\n",
+    "duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "viewers: 6328\n",
+      "clickers: 1860\n",
+      "users who clicked but didn't view: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "viewers = df[df['action'] == 'view']['id'].nunique()\n",
+    "print(f\"viewers: {viewers}\")\n",
+    "\n",
+    "clickers = df[df['action'] == 'click']['id'].nunique()\n",
+    "print(f\"clickers: {clickers}\")\n",
+    "\n",
+    "click_no_view = df[~df['id'].isin(df[df['action'] == 'view']['id']) & (df['action'] == 'click')]\n",
+    "print(f\"users who clicked but didn't view: {len(click_no_view)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conduct a Statistical Test\n",
+    "\n",
+    "Conduct a statistical test to determine whether the experimental homepage was more effective than that of the control group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verifying Results\n",
+    "\n",
+    "One sensible formulation of the data to answer the hypothesis test above would be to create a binary variable representing each individual in the experiment and control group. This binary variable would represent whether or not that individual clicked on the homepage; 1 for they did and 0 if they did not. \n",
+    "\n",
+    "The variance for the number of successes in a sample of a binomial variable with n observations is given by:\n",
+    "\n",
+    "## $n\\bullet p (1-p)$\n",
+    "\n",
+    "Given this, perform 3 steps to verify the results of your statistical test:\n",
+    "1. Calculate the expected number of clicks for the experiment group, if it had the same click-through rate as that of the control group. \n",
+    "2. Calculate the number of standard deviations that the actual number of clicks was from this estimate. \n",
+    "3. Finally, calculate a p-value using the normal distribution based on this z-score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1:\n",
+    "Calculate the expected number of clicks for the experiment group, if it had the same click-through rate as that of the control group. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "control_viewer_count: 3332\n",
+      "control_clicker_count: 932\n",
+      "experiment_viewer_count: 2996\n",
+      "experiment_clicker_count: 928\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate views and clicks for different groups\n",
+    "control_viewer_count = df[(df['group'] == 'control') & (df['action'] == 'view')]['id'].nunique()\n",
+    "control_clicker_count = df[(df['group'] == 'control') & (df['action'] == 'click')]['id'].nunique()\n",
+    "\n",
+    "experiment_viewer_count = df[(df['group'] == 'experiment') & (df['action'] == 'view')]['id'].nunique()\n",
+    "experiment_clicker_count = df[(df['group'] == 'experiment') & (df['action'] == 'click')]['id'].nunique()\n",
+    "\n",
+    "print(f\"control_viewer_count: {control_viewer_count}\")\n",
+    "print(f\"control_clicker_count: {control_clicker_count}\")\n",
+    "print(f\"experiment_viewer_count: {experiment_viewer_count}\")\n",
+    "print(f\"experiment_clicker_count: {experiment_clicker_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "control_conversion_rate: 0.2797118847539016\n",
+      "experiment_conversion_rate: 0.3097463284379172\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate conversion rates\n",
+    "\n",
+    "control_conversion_rate = control_clicker_count / control_viewer_count\n",
+    "experiment_conversion_rate = experiment_clicker_count / experiment_viewer_count\n",
+    "\n",
+    "print(f\"control_conversion_rate: {control_conversion_rate}\")\n",
+    "print(f\"experiment_conversion_rate: {experiment_conversion_rate}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2:\n",
+    "Calculate the number of standard deviations that the actual number of clicks was from this estimate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# z stat calculated below!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: \n",
+    "Finally, calculate a p-value using the normal distribution based on this z-score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z-statistic: -2.619\n",
+      "P-value: 0.009\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "\n",
+    "count = [control_clicker_count, experiment_clicker_count]\n",
+    "nobs = [control_viewer_count, experiment_viewer_count]\n",
+    "\n",
+    "z_stat, p_value = proportions_ztest(count, nobs)\n",
+    "print(f\"Z-statistic: {z_stat:.3f}\")\n",
+    "print(f\"P-value: {p_value:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis:\n",
+    "\n",
+    "Does this result roughly match that of the previous statistical test?\n",
+    "\n",
+    "> The z-statistic (-2.619) represents the number of standard deviations the observed difference in conversion rates is \n",
+    "from the null hypothesis. A negative z-statistic tells us that the conversion rate is lower than the control group's.\n",
+    "\n",
+    "> The P-value (0.009) is less than the significance level (0.05), which means we reject the null hypothesis. This means there\n",
+    "was a statistically significant difference between the conversion rates of the control and experiment groups.\n",
+    "\n",
+    "> However, with a negative z-statistic, this means the experimental homepage performed poorer than the control homepage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lab, you continued to get more practice designing and conducting AB tests. This required additional work preprocessing and formulating the initial problem in a suitable manner. Additionally, you also saw how to verify results, strengthening your knowledge of binomial variables, and reviewing initial statistical concepts of the central limit theorem, standard deviation, z-scores, and their accompanying p-values."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
